--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <fieldset id="code-container" class="code-container">
         <legend class="legend-text" style="font-size:x-large; color:#dc2f55">Unbreakable Chest Level 999
         </legend>
-        <small onclick="clearCodes()" style="cursor: pointer;">Clear</small>
+        <small onclick="clearCodes()" style="cursor: pointer;">Clear</small><small>&nbsp;(Double click to only change that case)</small>
         <div class="number-code">
           <input name='code' class='code-input' required placeholder="0" />
           <input name='code' class='code-input' required placeholder="1" />
