--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
               </div>
               <div id="player-content">
                 <div id="album-art">
-                  <img src="./assets/clockworks-disc.jpg" class="active" id="_1">
+                  <img src="./images/clockworks-disc.jpg" class="active" id="_1">
                 </div>
                 <div id="player-controls">
                   <div class="control">
@@ -278,7 +278,7 @@
         new Audio("./assets/clanks/" + clickList[randomIndex]).play();
       }
     } else {
-      new Audio("./assets/disabled-button.mp3").play();
+      new Audio("./assets/clanks/disabled.mp3").play();
     }
   }
 
@@ -358,8 +358,3 @@
     }
   }
 </script>
-
-<!-- background-image: url("./assets/output-nightcafestudios-fantasyworldgenerator.jpg");
-background-repeat: no-repeat;
-background-size: cover;
-background-attachment: fixed; -->
